# yadku

./: .gitignore  Makefile.am  README.md  config.h  config.h.in  config.status  configure.ac
po/: POTFILES.in  de.po  es.po  fr.po  it.po  pt_BR.po  sk.po  uk.po  zh_TW.po
src/: Makefile.am  main.c  option.c  util.c  yad.h
